@@ -91,6 +91,10 @@ class EntryInfo : Parcelable {
         return customFields.any { !it.protectedValue.isProtected }
     }
 
+    fun containsCustomField(label: String): Boolean {
+        return customFields.lastOrNull { it.name == label } != null
+    }
+
     fun isAutoGeneratedField(field: Field): Boolean {
         return field.name == OTP_TOKEN_FIELD
     }
